# fastDBarcode

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  Makefile  Makefile.manual  README.md  SConstruct  main.scons
src/: common.h  fdb.c  fdb.h  main.c
test/: CMakeLists.txt  integration.py  large_bcd.fasta  r1.fastq  r2.fastq  test.sh
test/data/: bcd.fasta  large_bcd.fasta
